--- a/webapp/src/play.css
+++ b/webapp/src/play.css
@@ -141,7 +141,7 @@ h3 {
   left: 50%;
   top: 6%;
   transform: translate(-50%,-50%);
-  width-: 60%;
+  width: 100%;
   text-align: center;
 }
 .center {
