--- a/webapp/src/play.css
+++ b/webapp/src/play.css
@@ -49,7 +49,7 @@ h3 {
   width: 100vw;
   margin: 0;
   padding: 0;
-  background: no-repeat center url(img/nike.jpg);
+  background-: no-repeat center url(img/nike.jpg);
   background-size: auto 100% !important;
   visibility: hidden;
 }
@@ -213,4 +213,8 @@ h3 {
   text-align: center;
   padding: 0 5%;
   font-size: 0.95em;
+}
+
+#third_screen {
+  display: none;
 }
