--- a/webapp/src/second_screen.css
+++ b/webapp/src/second_screen.css
@@ -1,18 +1,25 @@
 #second_screen, #second_screen_explain {
   display: none;
 }
-#logo_mk, #logo_lenta {
-  width: 50vw;
-  filter: brightness(3) grayscale(1);
-}
+
 #second_screen {
-  transform: translate(-50%,-50%);
-  left: 50% !important;
-  position: absolute;
-  top: 40%;
+  overflow: hidden;
+  height: 100vh;
+}
+.brand {
+  float: left;
+}
+.brand.mk, .brand.lenta {
+  width: 33.33vw;
+  filter: brightness(3) grayscale(1);
 }
 #second_screen_explain {
   position: absolute;
-  bottom: 10%;
+  top: 75%;
   left: 0;
+  text-align: center;
+  width: 100%;
+  height: -webkit-fill-available;
+  background: floralwhite;
+  padding-top: 5%;
 }
