--- a/webapp/src/play.css
+++ b/webapp/src/play.css
@@ -11,7 +11,8 @@ body {
 html, body {
   margin: 0 !important;
   padding: 0 !important;
-  background: floralwhite;
+  background-: floralwhite;
+  background: #e3e3e3; /*linen;*/
 }
 
 #third_screen p, #third_screen h2, #third_screen h3, #third_screen h4 {
@@ -218,4 +219,8 @@ h3 {
 
 #third_screen {
   display: none;
+}
+
+#js-container {
+  background: floralwhite;
 }
