--- a/webapp/src/play.css
+++ b/webapp/src/play.css
@@ -41,6 +41,9 @@ h3 {
   position: absolute;
   top: 0;
   z-index: 100;
+  object-fit: fill;
+  height: 100vh;
+  width: 100%;
 }
 .form {
   padding: 20px;
