--- a/webapp/src/play.css
+++ b/webapp/src/play.css
@@ -143,7 +143,8 @@ h3 {
   z-index: 150;
   position: absolute;
   padding: 0;
-  color: floralwhite;
+  color-: floralwhite;
+  display: none;
   left: 50%;
   top: 6%;
   transform: translate(-50%,-50%);
