--- a/webapp/src/play.css
+++ b/webapp/src/play.css
@@ -143,7 +143,7 @@ h3 {
   z-index: 150;
   position: absolute;
   padding: 0;
-  color-: white;
+  color: #878787;
   display: none;
   left: 50%;
   top: 5%;
