--- a/webapp/src/second_screen.css
+++ b/webapp/src/second_screen.css
@@ -11,7 +11,7 @@
 .brand {
   float-: left;
 }
-.brand.mk, .brand.lenta {
+.bid-107, .bid-55 {
   width: 23vh;
   filter: brightness(3) grayscale(1);
   margin-bottom: 5px;
