--- a/webapp/src/play.css
+++ b/webapp/src/play.css
@@ -283,3 +283,10 @@ h4 {
   display: none;
   padding: 20px 0;
 }
+#third_screen p.transfer-data-hint {
+  margin: 10px 20px;
+  padding: 5px 10px !important;
+  border-radius: 5px;
+  border: 1px solid gray;
+  background: cornsilk;
+}
