--- a/webapp/src/play.css
+++ b/webapp/src/play.css
@@ -214,11 +214,13 @@ h3 {
   position: absolute;
   color: white;
   z-index: 50;
-  top: 40vh;
+  top: 17vh;
   text-align: center;
-  padding: 0 5%;
-  font-size: 0.95em;
+  padding: 0;
+  font-size: 10px;
   visibility: hidden;
+  height-: 50vh;
+  overflow-y: scroll;
 }
 
 #third_screen {
