--- a/webapp/src/play.css
+++ b/webapp/src/play.css
@@ -214,10 +214,10 @@ h3 {
   position: absolute;
   color: white;
   z-index: 50;
-  top: 16vh;
+  top: 18vh;
   text-align: center;
-  padding: 0;
-  font-size: 10px;
+  padding: 0 5%;
+  font-size: 0.9em;
   visibility: hidden;
   height-: 50vh;
   overflow-y: scroll;
