--- a/webapp/src/play.css
+++ b/webapp/src/play.css
@@ -297,6 +297,8 @@ h4 {
 
 .available {
   background: limegreen;
+  border-radius: 5px;
+  padding: 0 4px;
 }
 .available > .address {
   color: black;
