--- a/webapp/src/play.css
+++ b/webapp/src/play.css
@@ -210,6 +210,19 @@ h3 {
   margin-bottom: 1.5em;
 }
 
+#ad_marker {
+  position: absolute;
+  z-index: 200;
+  top: 50px;
+  text-align: center;
+  color: white;
+  border: 1px solid;
+  left: 50%;
+  padding: 0px 8px;
+  border-radius: 15px;
+  transform: translate(-50%,-50%);
+}
+
 #ad_explain {
   position: absolute;
   color-: white;
