--- a/webapp/src/play.css
+++ b/webapp/src/play.css
@@ -213,12 +213,12 @@ h3 {
 #ad_marker {
   position: absolute;
   z-index: 200;
-  top: 4.5%;
+  top: 4.2vh;
   text-align: center;
   color: white;
   border: 1px solid;
   left: 5%;
-  padding: 1px 8px;
+  padding: 2px 8px;
   border-radius: 15px;
   transform-: translate(-50%, 0%);
   backdrop-filter: blur(5px);
