--- a/webapp/src/play.css
+++ b/webapp/src/play.css
@@ -221,11 +221,12 @@ h3 {
   text-align: center;
   color: white;
   border: 1px solid;
+  background: transparent;
   left: 10%;
   padding: 2px 8px;
   border-radius: 15px;
   transform-: translate(-50%, 0%);
-  backdrop-filter: blur(5px);
+  backdrop-filter: blur(15px);
 }
 
 #ad_explain {
