--- a/webapp/src/play.css
+++ b/webapp/src/play.css
@@ -232,9 +232,10 @@ h3 {
   right-: 100px;
   padding: 2px 12px;
   border-radius: 15px;
-  font-size: 0.92em;
+  font-size: 0.95em;
   transform: translate(-50%, 50%);
-  backdrop-filter: blur(15px) contrast(50%) brightness(120%);
+  backdrop-filter: blur(15px) contrast(100%) brightness(120%);
+  -webkit-backdrop-filter: blur(15px) contrast(100%) brightness(120%);
 }
 
 #ad_explain {
