--- a/webapp/src/play.css
+++ b/webapp/src/play.css
@@ -233,7 +233,8 @@ h3 {
   padding: 3px 12px;
   border-radius: 15px;
   font-family: system-ui;
-  font-size: 0.9em;
+  font-weight: 600;
+  font-size: 0.75em;
   transform: translate(-50%, 50%);
   backdrop-filter: blur(15px) contrast(100%) brightness(120%);
   -webkit-backdrop-filter: blur(15px) contrast(100%) brightness(120%);
