--- a/webapp/src/play.css
+++ b/webapp/src/play.css
@@ -230,14 +230,14 @@ h3 {
   left: 50%;
   left-: 2%;
   right-: 100px;
-  padding: 6px 10px;
+  padding: 4px 12px 6px 12px;
   border-radius: 15px;
   font-family: system-ui;
   font-weight: 600;
   font-size: 0.8em;
   transform: translate(-50%, 50%);
-  backdrop-filter: blur(15px) contrast(100%) brightness(140%);
-  -webkit-backdrop-filter: blur(15px) contrast(100%) brightness(140%);
+  backdrop-filter: blur(15px) contrast(100%) brightness(120%);
+  -webkit-backdrop-filter: blur(15px) contrast(100%) brightness(120%);
 }
 
 #ad_explain {
