--- a/webapp/src/play.css
+++ b/webapp/src/play.css
@@ -84,8 +84,10 @@ h3 {
 }
 
 .swiper-pagination {
-  background: rgba(255, 255, 255, 0.6) !important;
+  background-: rgba(255, 255, 255, 0.6) !important;
   border-radius: 20px;
+  backdrop-filter: blur(15px) contrast(80%) brightness(150%);
+  -webkit-backdrop-filter: blur(15px) contrast(80%) brightness(150%);
 }
 .swiper-pagination-vertical {
   padding: 0px 5px;
