--- a/webapp/src/play.css
+++ b/webapp/src/play.css
@@ -250,7 +250,7 @@ h3 {
   position: absolute;
   color-: white;
   z-index: 198;
-  bottom: 10vh;
+  bottom: 80px;
   text-align: center;
   width: 100%;
   padding: 0 5%;
